--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -1,12 +1,12 @@
 <div class="post-detail-container">
 	<div class="row">
 		<div class="col-sm-12">
-			<h4>{{ post.title }}</h4>
-			<p>{{ post.author }} {{ post.postTime }} 点击：{{ post.readTimes }} 评论：{{ post.commentTimes }}</p>
+			<h4>{{ post.postTitle }}</h4>
+			<p>{{ post.nickName }} {{ post.postTime | date:'yyyy-MM-dd HH:mm:ss'}} 阅读：{{ post.readTimes }} 评论：{{ post.commentTimes }}</p>
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-12" [innerHTML]="post.text">
+		<div class="col-sm-12" [innerHTML]="post.postContent">
 		</div>
 	</div>
 </div>
