--- a/src/app/comment/add-comment/add-comment.component.html
+++ b/src/app/comment/add-comment/add-comment.component.html
@@ -5,7 +5,7 @@
                 <div class="col-sm-12">
                     <form role="form">
                         <div class="form-group">
-                            <textarea class="form-control" rows="5" placeholder="5-140个字符，非法字符自动截断。"></textarea>
+                            <textarea class="form-control" rows="5" placeholder="5-140个字符，非法字符自动转义，超长自动截断。"></textarea>
                         </div>
                         <button type="button" class="btn btn-success">提交</button>
                     </form>
@@ -14,7 +14,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <div *ngFor="let comment of comments" class="comment-item-container">
-                        <p>{{comment.username}} {{comment.date}}</p>
+                        <p>{{comment.nickName}} {{comment.commentTime | date:'yyyy-MM-dd HH:mm:ss'}}</p>
                         <h5>{{comment.content}}</h5>
                     </div>
                 </div>
