--- a/src/app/post/post-detail/post-detail.component.html
+++ b/src/app/post/post-detail/post-detail.component.html
@@ -6,7 +6,7 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-sm-12" [innerHTML]="post.postContent">
+		<div class="col-sm-12" [innerHTML]="post.content">
 		</div>
 	</div>
 </div>
