--- a/src/app/post/write-post/write-post.component.html
+++ b/src/app/post/write-post/write-post.component.html
@@ -1,21 +1,21 @@
 <div class="write-post-container" [@flyIn]="'active'">
     <div class="row">
         <div class="col-sm-12">
-            <form role="form">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="标题，2到32个字符">
+            <form #postForm="ngForm" (ngSubmit)="postForm.form.valid && submitPost()" novalidate class="form-horizontal" role="form">
+                <div class="form-group" [ngClass]="{ 'has-error': postForm.submitted && !postTitle.valid }">
+                    <input type="text" class="form-control" placeholder="标题，2到32个字符" required minlength="2" maxlength="32" name="postTitle" [(ngModel)]="post.postTitle" #postTitle="ngModel">
+                    <div *ngIf="postForm.submitted && !postTitle.valid" class="text-danger">标题必须是2到32个字符</div>
+                </div>
+                <div class="form-group" [ngClass]="{ 'has-error': postForm.submitted && !originalURL.valid }">
+                    <input type="text" class="form-control" placeholder="原文URL，如果是转载或者翻译请粘贴，最长1024个字符" maxlength="1024" name="originalURL" [(ngModel)]="post.originalURL" #originalURL="ngModel">
+                    <div *ngIf="postForm.submitted && !originalURL.valid" class="text-danger">最长1024个字符</div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="原文URL，如果是转载或者翻译请粘贴，最长1024个字符">
+                    <textarea  id="post_editor" class="form-control" rows="20" placeholder="内容，最少140字，最多1万字。图片每张最大500K，每篇文章最多50张图。"></textarea>
                 </div>
                 <div class="form-group">
-                    <textarea id="post_editor" class="form-control" rows="20" placeholder="内容，最少140字，最多2万字。图片每张最大500K，每篇文章最多50张图。"></textarea>
-                    <iframe id="form_target" name="form_target" style="display:none"></iframe>
-                    <form id="file_upload_form" target="form_target" method="post" enctype="multipart/form-data" style="width:0px;height:0;overflow:hidden">
-                        <input id="img_input" name="image" type="file" (change)="fileInputChangeHandler()">
-                    </form>
+                    <button type="submit" class="btn btn-success">提交</button>
                 </div>
-                <button type="submit" class="btn btn-success">提交</button>
             </form>
         </div>
     </div>
