--- a/src/app/user/user-login/user-login.component.html
+++ b/src/app/user/user-login/user-login.component.html
@@ -5,11 +5,11 @@
         </div>
         <div class="panel-body">
             <form #form="ngForm" (ngSubmit)="form.form.valid && doLogin()" novalidate class="form-horizontal" role="form">
-                <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !userName.valid }">
+                <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !email.valid }">
                     <label class="col-sm-3 control-label">邮箱：</label>
                     <div class="col-sm-8">
-                        <input required name="userName" [(ngModel)]="user.userName" #userName="ngModel" type="text" class="form-control" placeholder="请输入注册时使用的邮箱">
-                        <div *ngIf="form.submitted && !userName.valid" class="text-danger">用户名必须输入！</div>
+                        <input required name="email" [(ngModel)]="user.email" #email="ngModel" type="text" class="form-control" placeholder="请输入注册时使用的邮箱">
+                        <div *ngIf="form.submitted && !email.valid" class="text-danger">邮箱必须输入！</div>
                     </div>
                 </div>
                 <div class="form-group" [ngClass]="{ 'has-error': form.submitted && !password.valid }">
