--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,9 @@
                 <li routerLinkActive="active" class="dropdown">
                     <a routerLink="posts">{{'app.articles' | translate}}</a>
                 </li>
+                <li class="dropdown">
+                    <a routerLink="user/posts">{{'post.publish' | translate}}</a>
+                </li>
             </ul>
             <ul *ngIf="!currentUser?.nickName" class="nav navbar-nav navbar-right">
                 <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
