只允许已经登录的用户访问新增文章的功能，未登录用户自动跳转到登录界面；

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,7 +18,7 @@
                     <a routerLink="posts">{{'app.articles' | translate}}</a>
                 </li>
                 <li class="dropdown">
-                    <a routerLink="user/posts">{{'post.publish' | translate}}</a>
+                    <a href="javascript:void(0);" (click)="switchToWritePost()">{{'post.publish' | translate}}</a>
                 </li>
             </ul>
             <ul *ngIf="!currentUser?.nickName" class="nav navbar-nav navbar-right">
