--- a/src/app/comment/add-comment/add-comment.component.html
+++ b/src/app/comment/add-comment/add-comment.component.html
@@ -3,33 +3,32 @@
         <div class="panel-body">
             <div class="row">
                 <div class="col-sm-12">
-                    <!--如果用户已登录，不显示昵称和email输入框-->
-                    <form #commentForm="ngForm" (ngSubmit)="commentForm.form.valid && submitCommet()" novalidate class="form-horizontal" role="form">
-                        <div class="form-group" *ngIf="!hasLogin">
-                            <label class="col-sm-2 control-label">昵称</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" placeholder="您的昵称，不填会显示为游客" [(ngModel)]="comment.nickName" name="nickName">
+                    <div class="comment-form-container">
+                        <form #commentForm="ngForm" (ngSubmit)="commentForm.form.valid && submitCommet()" novalidate class="form-horizontal" role="form">
+                            <!--如果用户已登录，不显示昵称和email输入框-->
+                            <div class="form-group" *ngIf="!hasLogin">
+                                <div class="col-sm-12">
+                                    <input type="text" class="form-control" placeholder="请问怎么称呼您，不填会显示为游客" [(ngModel)]="comment.nickName" name="nickName">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" *ngIf="!hasLogin">
-                            <label class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" placeholder="常用的Email，不填也可以" [(ngModel)]="comment.email" name="email">
+                            <div class="form-group" *ngIf="!hasLogin">
+                                <div class="col-sm-12">
+                                    <input type="email" class="form-control" placeholder="常用的Email，不填也可以" [(ngModel)]="comment.email" name="email">
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group" [ngClass]="{ 'has-error': commentForm.submitted && !content.valid }">
-                            <label class="col-sm-2 control-label">评论内容</label>
-                            <div class="col-sm-10">
-                                <textarea class="form-control" rows="5" placeholder="5-140个字符，非法字符自动转义，超长自动截断。" required minlength="5" maxlength="140" name="content" [(ngModel)]="comment.content" #content="ngModel"></textarea>
-                                <div *ngIf="commentForm.submitted && !content.valid" class="text-danger">5-140个字符，评论内容不能为空</div>
+                            <div class="form-group" [ngClass]="{ 'has-error': commentForm.submitted && !content.valid }">
+                                <div class="col-sm-12">
+                                    <textarea class="form-control" rows="5" placeholder="5-140个字符，非法字符自动转义，超长自动截断。" required minlength="5" maxlength="140" name="content" [(ngModel)]="comment.content" #content="ngModel"></textarea>
+                                    <div *ngIf="commentForm.submitted && !content.valid" class="text-danger">5-140个字符，评论内容不能为空</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">提交</button>
+                            <div class="form-group">
+                                <div class="col-sm-10">
+                                    <button type="submit" class="btn btn-success">提交</button>
+                                </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
+                    </div>
                 </div>
             </div>
             <div class="row">
