删掉不要的内容；

--- a/src/app/home/social-channel/social-channel.component.html
+++ b/src/app/home/social-channel/social-channel.component.html
@@ -1,10 +1,9 @@
 <div class="social-channel-container">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3 class="panel-title">社交媒体</h3>
+            <h3 class="panel-title">视频教程</h3>
         </div>
         <div class="list-group">
-            <a href="http://weibo.com/2932378834/profile?topnav=1&wvr=6" class="list-group-item" target="_blank"><i class="fa fa-weibo" aria-hidden="true"></i> 官方微博</a>
             <a href="http://i.youku.com/i/UMzI1MjQ0MDgw/videos?spm=a2hzp.8244740.0.0" class="list-group-item" target="_blank"><i class="fa fa-video-camera" aria-hidden="true"></i> 优酷视频教程</a>
             <a href="https://www.youtube.com/watch?v=cLQUI7t30HY&list=PLbhC27Bf6WlnJReRfmuH5FCrWLXYwrFtO" class="list-group-item" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i> 油管视频教程</a>
         </div>
