--- a/src/app/user/user-info/user-info.component.html
+++ b/src/app/user/user-info/user-info.component.html
@@ -4,9 +4,9 @@
             <h3 class="panel-title">{{panelTitle}}</h3>
         </div>
         <div class="panel-body">
-            <p><a href="#">头像图片</a></p>
-            <p><a href="#">{{currentUser?.userName}}</a></p>
-            <p>相看两不厌，唯有敬亭山。</p>
+            <!--<p><a href="#">{{currentUser?.userName}}</a></p>-->
+            <p><a href="#">大漠穷秋</a></p>
+            <p>阅读：65535</p>
             <p>文章：500</p>
             <p>评论：10</p>
         </div>
