删掉不用的内容

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,5 +17,7 @@ html {
   padding-bottom: 162px;
 }
 
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.min.css";
 @import "~jquery-ui-dist/jquery-ui.css";
 @import "~ng2-toastr/bundles/ng2-toastr.min.css";
