用户管理后台文章列表功能

--- a/src/app/post/postlist/postlist.component.html
+++ b/src/app/post/postlist/postlist.component.html
@@ -30,7 +30,7 @@
                     <i class="fa fa-comment" aria-hidden="true"></i>&nbsp;{{post.commentTimes}} &nbsp;&nbsp;&nbsp;&nbsp; {{post.nickName }} &nbsp;&nbsp;&nbsp;&nbsp;{{post.postTime | date:'yyyy-MM-dd HH:mm:ss'}}
                 </p>
             </div>
-            <pagination [totalItems]="totalItems" [maxSize]="maxSize" [itemsPerPage]="itemsPerPage" [(ngModel)]="currentPage" firstText="{{'firstPage' | translate}}" lastText="{{'lastPage' | translate}}" previousText="{{'previousPage' | translate}}" nextText="{{'nextPage' | translate}}"
+            <pagination [totalItems]="totalItems" [maxSize]="maxPageSize" [itemsPerPage]="itemsPerPage" [(ngModel)]="currentPage" firstText="{{'firstPage' | translate}}" lastText="{{'lastPage' | translate}}" previousText="{{'previousPage' | translate}}" nextText="{{'nextPage' | translate}}"
                 [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" class="pagination-sm"></pagination>
         </div>
     </div>
