--- a/src/app/manage/post-table/post-table.component.html
+++ b/src/app/manage/post-table/post-table.component.html
@@ -7,17 +7,15 @@
                         <tr>
                             <th>序号</th>
                             <th>标题</th>
-                            <th>作者</th>
                             <th>日期</th>
                             <th>操作</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr *ngFor="let post of postList">
-                            <td>{{post.postId}}</td>
-                            <td>{{post.title}}</td>
-                            <td>{{post.userName}}</td>
-                            <td>{{post.postTime}}</td>
+                        <tr *ngFor="let post of postList;let i=index;">
+                            <td>{{i+1}}</td>
+                            <td>{{post.postTitle}}</td>
+                            <td>{{post.postTime|date:'yyyy-MM-dd HH:mm:ss'}}</td>
                             <td>
                                 <a href="javascript:void(0);" name="{{post.postId}}" (click)="editPost($event)"><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
                                 <a href="javascript:void(0);" name="{{post.postId}}" (click)="unTop($event)"><i class="fa fa-list-ul" aria-hidden="true"></i></a>
@@ -28,8 +26,8 @@
                     </tbody>
                 </table>
             </div>
-            <pagination [totalItems]="totalItems" [maxSize]="maxSize" [itemsPerPage]="itemsPerPage" [(ngModel)]="currentPage" firstText="{{'firstPage' | translate}}" lastText="{{'lastPage' | translate}}" previousText="{{'previousPage' | translate}}" nextText="{{'nextPage' | translate}}"
-                [boundaryLinks]="true" [rotate]="false" (numPages)="numPages = $event" (pageChanged)="pageChanged($event)" class="pagination-sm"></pagination>
+            <pagination [totalItems]="totalItems" [maxSize]="maxPageSize" [itemsPerPage]="itemsPerPage" [(ngModel)]="currentPage" firstText="{{'firstPage' | translate}}" lastText="{{'lastPage' | translate}}" previousText="{{'previousPage' | translate}}" nextText="{{'nextPage' | translate}}"
+                [boundaryLinks]="true" [rotate]="false" (pageChanged)="pageChanged($event)" class="pagination-sm"></pagination>
         </div>
     </div>
 </div>
